Fix IE svg stretching or sponsors images

--- a/css/main.less
+++ b/css/main.less
@@ -362,7 +362,8 @@ article {
     width: 100px;
 
     img {
-      max-width: 100%;
+      width: 100%;
+      height: auto;
     }
   }
 }
